# utn-frsn-news

./: .gcloudignore  .gitignore  CNAME  README.md  deploy.sh  index.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  run_messager.py  run_scraper.py  script_inicial.py  wrangler.jsonc
bot/: base.py  db.py  logger.py  message_formatter.py  messager.py  mongo.py  parser_feed.py  parser_news.py  scraper.py  telegram.py
src/: database_models.py  entry.py  logger.py
src/app/: cloudflare_images.py  cloudflare_queues.py  constants.py  database_models.py  logger.py
src/app/fastapi_app/: database.py  main.py  schemas.py
src/app/fastapi_app/templates/: 404.html  about.html  about_en.html  about_es.html  error.html  home.html  layout.html  news_detail.html  search.html
src/app/main_apps/: main.py
src/app/main_apps/messenger/: message_formatter.py  telegram.py
src/app/main_apps/scraper/: feed.py  news.py
src/app/messenger/: message_formatter.py  telegram.py
src/app/scraper/: feed.py  news.py  parser_news.py  scraper.py
src/bot/: db.py
src/messenger/: messager.py  telegram.py
src/scraper/: parser_feed.py  parser_news.py  scraper.py
