[project]
name = "utn-frsn-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py"
]
